// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaggedItem > matches snapshot 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="container"
>
  <div
    class="flex items-center gap-2"
    data-testid="container"
  >
    <div
      data-testid="tag"
    >
      bitcoin
       
      (3)
    </div>
    <button
      class="size-8"
      data-testid="search-button"
      variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search text-secondary-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </button>
    <button
      aria-expanded="false"
      aria-label="Show 3 users who tagged"
      class="flex cursor-pointer items-center pr-2 transition-opacity hover:opacity-80"
      data-testid="avatar-group-button"
    >
      <div
        data-name="user1"
        data-testid="avatar"
      >
        Avatar
      </div>
      <div
        data-name="user2"
        data-testid="avatar"
      >
        Avatar
      </div>
      <div
        data-name="user3"
        data-testid="avatar"
      >
        Avatar
      </div>
    </button>
  </div>
</div>
`;

exports[`TaggedItem - Snapshots > matches snapshot when expanded 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="container"
>
  <div
    class="flex items-center gap-2"
    data-testid="container"
  >
    <div
      data-testid="tag"
    >
      bitcoin
       
      (3)
    </div>
    <button
      class="size-8"
      data-testid="search-button"
      variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search text-secondary-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </button>
    <button
      aria-expanded="true"
      aria-label="Show 3 users who tagged"
      class="flex cursor-pointer items-center pr-2 transition-opacity hover:opacity-80"
      data-testid="avatar-group-button"
    >
      <div
        data-name="user1"
        data-testid="avatar"
      >
        Avatar
      </div>
      <div
        data-name="user2"
        data-testid="avatar"
      >
        Avatar
      </div>
      <div
        data-name="user3"
        data-testid="avatar"
      >
        Avatar
      </div>
    </button>
  </div>
  <div
    data-testid="who-tagged-expanded-list"
  >
    Expanded List (
    3
     users)
  </div>
</div>
`;

exports[`TaggedItem - Snapshots > matches snapshot with hideAvatars 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="container"
>
  <div
    class="flex items-center gap-2"
    data-testid="container"
  >
    <div
      data-testid="tag"
    >
      bitcoin
       
      (3)
    </div>
    <button
      class="size-8"
      data-testid="search-button"
      variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search text-secondary-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </button>
  </div>
</div>
`;
